2010-08-10	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/UPGRADE: Added deprecation warning for htaccessUser and htaccessPwd

	* pf/bin/pfcmd, pf/conf/switches.conf, pf/conf/ui.conf,
	pf/docs/PacketFence_Administration_Guide.odt,
	pf/html/admin/configuration/switches.php,
	pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php,
	pf/lib/pf/pfcmd/pfcmd.pm: switches.conf now accepts Web Services
	related configuration (wsTransport, wsUser, wsPwd)
	Also updated all related helpers, interfaces and documentation

2010-08-09	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/login.php: Admin auth mechanism localuser+ldappass
	also fallbacks to localpass on error

	* pf/UPGRADE: Added an upgrade note about the Admin interface access
	control

2010-08-05	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Added two new Q&A:
	- How can users authenticate using LDAP or Active Directory (AD) 
	instead of using a local flat file?
	- How can I provide different rights to users of the admin Web 
	interface?

2010-08-04	Olivier Bilodeau <obilodeau@inverse.ca>
	Merged org.packetfence.feature.granular-admin-access with revno
	2c753bafa6f766c330510b2895729ecf42cd71d9

	* pf/conf/pf-release, pf/packetfence.spec, pf/t/pfcmd.t: Officially 
	entering pre-release snapshots land for 1.9.1

	* pf/README_SWITCHES: Aligned content with webiste regarding Aruba
	support

	* pf/lib/pf/scan.pm: Increasing log severity for a nessus scan error
	Heading towards #1032 improvements;
	http://www.packetfence.org/bugs/view.php?id=1032

2010-08-03	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/dhcp_fingerprints.conf: New DHCP fingerprints: Cisco
	Wireless Access Point and FortiOS

2010-07-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php: Corrected bad whitespace
	again...