@@ -22,12 +22,24 @@ macSearchesSleepInterval=2
 switchTypesToExclude=
 VoIPEnabled=no
 uplink=dynamic
+
 # SNMP
 SNMPVersion = 1
 SNMPCommunityRead = public
 SNMPCommunityWrite = private
 SNMPVersionTrap = 1
 SNMPCommunityTrap = public
+
+# Command Line Interface 
+cliTransport=Telnet
+cliUser=
+cliPwd=
+cliEnablePwd=
+
+# Web Services Interface 
+wsTransport=http
+wsUser=
+wsPwd=
 
 [127.0.0.1]
 type=PacketFence
@@ -48,13 +60,19 @@ SNMPPrivProtocolTrap=DES
 SNMPPrivPasswordTrap=privpwdread
 mode=production
 SNMPVersion=2c
-cliTransport=ssh
 SNMPCommunityRead=readCommunity
 SNMPCommunityWrite=writeCommunity
 SNMPCommunityTrap=trapCommunity
+
+cliTransport=ssh
 cliUser=cliUser
 cliPwd=cliPwd
 cliEnablePwd=cliEnable
+
+wsTransport=https
+wsUser=webservices_user
+wsPwd=webservices_pwd
+
 voiceVlan=10
 SNMPEngineID=SNMPEngineID
 SNMPUserNameRead=userRead
